@@ -81,6 +81,7 @@ class SyRouting
   void writeRtpData(unsigned src_slot,const char *data,int len) const;
   static unsigned livewireNumber(const QHostAddress &addr);
   static QHostAddress streamAddress(Realm realm,uint16_t lw_num);
+  static QString sourceString(const QHostAddress &s_addr,int s_slot);
   static QString dumpAddress(uint32_t addr);
   static QString socketErrorString(const QString &msg);
 
