@@ -324,3 +324,9 @@
 	* Added an 'SyGpo' class in 'sy/sygpo.cpp' and 'sy/sygpo.h'.
 	* Added a test harness for 'SyLwrpClient in 'tests/synodetest.cpp'
 	and 'tests/synodetest.h'.
+2015-11-11 Fred Gleason <fredg@paravelsystems.com>
+	* Extended the 'SyLwrpClient::setGpoSourceAddress()' methods to handle
+	source stream addresses correctly.
+2015-11-13 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SyRouting::sourceString()' method in 'sy/syrouting.cpp'
+	and 'sy/syrouting.h'.
